# capybara

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/capy-canvas-core/: Cargo.toml
crates/capy-canvas-core/src/: ai_snapshot.rs  command.rs  connector.rs  content_card.rs  input.rs  input_finalize.rs  input_keys.rs  input_tools.rs  lib.rs  line_edit.rs  line_geometry.rs  minimap.rs  mouse.rs  render.rs  render_hachure.rs  render_line_ui.rs  render_lines.rs  render_overlay.rs  render_rough.rs  render_shapes.rs  render_text.rs  render_ui.rs  shape.rs  state.rs  state_project_artifact_tests.rs  state_serial.rs  state_shapes.rs  state_style_tests.rs  state_tests.rs  state_ui.rs  text.rs  text_edit.rs  ui.rs  ui_panels.rs  ui_status.rs  ui_style_panel.rs  ui_style_panel_draw.rs  ui_style_panel_logic.rs  viewport_interaction.rs
crates/capy-canvas-core/src/shape/: geometry.rs
crates/capy-canvas-core/src/state_shapes/: arrange.rs  context_cards.rs  image_import.rs
crates/capy-canvas-core/src/ui/: tests.rs
crates/capy-canvas-core/tests/: canvas_ai_context_tests.rs  canvas_alignment_tests.rs  canvas_arrows_tests.rs  canvas_editing_tests.rs  canvas_export_import_tests.rs  canvas_interaction_polish_tests.rs  canvas_selection_tests.rs  canvas_shapes_tests.rs  canvas_tests.rs  canvas_text_tests.rs  canvas_view_connector_tests.rs
crates/capy-canvas-core/tests/common/: mod.rs
crates/capy-canvas-web/: Cargo.toml
crates/capy-canvas-web/src/: lib.rs
crates/capy-canvas-web/src/web/: downloads.rs  exports.rs  idb_store.rs  io.rs  project_artifacts.rs  vector_style.rs  viewport.rs
crates/capy-cli/: Cargo.toml
crates/capy-cli/src/: agent.rs  canvas.rs  canvas_context.rs  chat.rs  chat_context.rs  clips.rs  component.rs  cutout.rs  desktop_verify.rs  doctor.rs  help_topics.rs  image.rs  interaction.rs  ipc_client.rs  main.rs  media.rs  nextframe.rs  poster.rs  project.rs  project_context.rs  project_patch.rs  timeline.rs  tts.rs
crates/capy-cli/src/canvas/: image_tool.rs  poster.rs
crates/capy-cli/src/game_assets/: mod.rs  model.rs  render.rs
crates/capy-cli/src/help_topics/: catalog.rs  docs.rs  media_docs.rs
crates/capy-cli/src/motion/: html.rs  metrics.rs  mod.rs  model.rs  process.rs  prompts.rs  verify.rs
crates/capy-cli/src/project/: clip_queue.rs  live.rs
crates/capy-cli/src/timeline/: live.rs  report.rs
crates/capy-cli/tests/: clips_pipeline_smoke.rs  media_cli.rs  nextframe_cli.rs  nextframe_shell_cli.rs  timeline_cli.rs  timeline_shell_cli.rs
crates/capy-cli/tests/support/: nextframe_snapshot_cases.rs  nextframe_state_cases.rs  timeline_snapshot_cases.rs  timeline_state_cases.rs
crates/capy-clips-align/: Cargo.toml
crates/capy-clips-align/scripts/: align_ffa.py
crates/capy-clips-align/src/: lib.rs  script.rs  tests.rs  text.rs
crates/capy-clips-core/: Cargo.toml
crates/capy-clips-core/src/: karaoke.rs  karaoke_template.html  lib.rs  python.rs
crates/capy-clips-cut/: Cargo.toml
crates/capy-clips-cut/src/: lib.rs
crates/capy-clips-download/: Cargo.toml
crates/capy-clips-download/src/: lib.rs
crates/capy-clips-transcribe/: Cargo.toml
crates/capy-clips-transcribe/scripts/: whisper_transcribe.py
crates/capy-clips-transcribe/src/: lib.rs
crates/capy-components/: Cargo.toml
crates/capy-components/src/: lib.rs
crates/capy-nextframe/: Cargo.toml
crates/capy-nextframe/src/: config.rs  doctor.rs  error.rs  lib.rs
crates/capy-nextframe/src/adapter/: binary.rs  crate_adapter.rs  mod.rs
crates/capy-nextframe/src/asset/: copy.rs  mod.rs  scan.rs
crates/capy-nextframe/src/brand/: mod.rs  tokens.rs
crates/capy-nextframe/src/compile/: binary.rs  embedded.rs  mod.rs  report.rs
crates/capy-nextframe/src/compose/: composition.rs  mapping.rs  mod.rs  poster.rs
crates/capy-nextframe/src/export/: binary.rs  embedded.rs  mod.rs  report.rs
crates/capy-nextframe/src/ports/: mod.rs  project.rs  recorder.rs
crates/capy-project/: Cargo.toml
crates/capy-project/src/: ai.rs  campaign.rs  design_language.rs  generate.rs  lib.rs  model.rs  package.rs  patch.rs  review.rs  selection_context.rs  surface_nodes.rs  video_clip_feedback.rs  video_clip_proposal.rs  video_clip_proposal_history.rs  video_clip_proposal_tests.rs  video_clip_proposal_types.rs  video_clip_queue.rs  video_clip_semantics.rs  video_clip_suggestion.rs  video_clip_suggestion_tests.rs  video_import.rs  video_project_context.rs  workbench.rs
crates/capy-project/tests/: review.rs
crates/capy-recorder/: Cargo.toml
crates/capy-recorder/src/: backend.rs  cef_osr.rs  cli.rs  events.rs  export_api.rs  frame_pool.rs  lib.rs  main.rs  orchestrator.rs  record_loop.rs  snapshot.rs  source_export.rs  verify_mp4.rs
crates/capy-recorder/tests/: arch_no_eval.rs  cli_events.rs  hevc_encode.rs  mp4_writer.rs  regression_bug_a.rs  snapshot.rs  verify_mp4.rs  vt_encode.rs
crates/capy-shell/: Cargo.toml
crates/capy-shell-mac/: Cargo.toml
crates/capy-shell-mac/src/: carenderer.rs  iosurface.rs  lib.rs  webview.rs
crates/capy-shell-mac/tests/: arch_no_eval.rs  carenderer_sample.rs  headless_smoke.rs  wkwebview_async_seek.rs
crates/capy-shell/src/: agent.rs  agent_tools.rs  app.rs  browser.rs  capture.rs  ipc.rs  lib.rs  main.rs  project_ipc.rs  project_ipc_campaign.rs  project_ipc_clip_queue.rs  project_ipc_surface.rs  store.rs  traffic_light.rs  webview.rs
crates/capy-shell/tests/: ipc_nextframe_attach.rs  ipc_timeline_attach.rs  nextframe_attach_state.rs  nextframe_open.rs  timeline_attach_state.rs  timeline_open.rs
crates/capy-timeline/: Cargo.toml
crates/capy-timeline-project/: Cargo.toml
crates/capy-timeline-project/src/: clip_composition.rs  clip_helpers.rs  component_catalog.rs  composition_base.rs  episode_compile.rs  episode_helpers.rs  lib.rs  storage.rs
crates/capy-timeline/src/: config.rs  doctor.rs  error.rs  lib.rs  video_source.rs
crates/capy-tts/: Cargo.toml  README.md
crates/capy-tts/scripts/: align_ffa.py  align_runtime.py
crates/capy-tts/src/: config.rs  lang.rs  lib.rs
crates/capy-tts/tests/: smoke.rs
(+399 files in other folders)
