[workspace]
resolver = "2"
members = [
    "crates/capy-cli",
    "crates/capy-canvas-core",
    "crates/capy-canvas-web",
    "crates/capy-contracts",
    "crates/capy-creative-core",
    "crates/capy-project",
    "crates/capy-image-gen",
    "crates/capy-timeline-project",
    "crates/capy-timeline",
    "crates/capy-tts",
    "crates/capy-clips-core",
    "crates/capy-clips-download",
    "crates/capy-clips-transcribe",
    "crates/capy-clips-align",
    "crates/capy-clips-cut",
    "crates/capy-poster",
    "crates/capy-scroll-media",
    "crates/capy-shell",
]
exclude = [
    "crates/capy-recorder",
    "crates/capy-shell-mac",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
authors = ["Capybara Contributors"]
repository = "https://github.com/capybara-ai/capybara"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
interprocess = { version = "2.4", features = ["tokio"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
tao = "0.35"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util"] }
uuid = { version = "1", features = ["v4"] }
wef = "0.6"
raw-window-handle = "0.6"
vello = "0.6"
skrifa = "0.22"
winit = "0.30"
wasm-bindgen = "0.2"
capy-canvas-core = { path = "crates/capy-canvas-core" }
capy-contracts = { path = "crates/capy-contracts" }
capy-creative-core = { path = "crates/capy-creative-core" }
capy-project = { path = "crates/capy-project" }
capy-image-gen = { path = "crates/capy-image-gen" }
capy-timeline-project = { path = "crates/capy-timeline-project" }
capy-timeline = { path = "crates/capy-timeline" }
capy-tts = { path = "crates/capy-tts" }
capy-clips-core = { path = "crates/capy-clips-core" }
capy-clips-download = { path = "crates/capy-clips-download" }
capy-clips-transcribe = { path = "crates/capy-clips-transcribe" }
capy-clips-align = { path = "crates/capy-clips-align" }
capy-clips-cut = { path = "crates/capy-clips-cut" }
capy-poster = { path = "crates/capy-poster" }
capy-scroll-media = { path = "crates/capy-scroll-media" }
which = "7"
directories = "6"
once_cell = "1"
regex = "1"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
wildcard_imports = "deny"

[patch.crates-io]
wef = { path = "vendor/wef" }
