[package]
name = "capy-clips-align"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capybara clips forced alignment pipeline"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.15"
thiserror.workspace = true
capy-clips-core.workspace = true

[lints]
workspace = true
