[package]
name = "capy-clips-cut"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capybara clips cutting pipeline"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
capy-clips-core.workspace = true

[lints]
workspace = true
