[package]
name = "capy-clips-download"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capybara clips source downloader"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
capy-clips-core.workspace = true

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
