[package]
name = "capy-clips-transcribe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capybara clips transcription pipeline"

[dependencies]
anyhow.workspace = true
rayon = "1.10"
serde.workspace = true
serde_json.workspace = true
capy-clips-core.workspace = true
tempfile = "3.15"

[lints]
workspace = true
