[package]
name = "capy-nextframe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
which.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
