[package]
name = "capy-nextframe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
capy-poster.workspace = true
image.workspace = true
nf-project = { path = "../../external/NextFrame/crates/nf-project" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
which.workspace = true

[dev-dependencies]

[lints]
workspace = true
