[package]
name = "capy-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "capy-shell"
path = "src/main.rs"

[dependencies]
base64.workspace = true
capy-contracts.workspace = true
capy-project.workspace = true
capy-image-gen.workspace = true
capy-timeline.workspace = true
ctrlc.workspace = true
image.workspace = true
interprocess.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tao.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
wef.workspace = true
raw-window-handle.workspace = true
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary", "NSGeometry", "NSString"] }

[lints]
workspace = true
