[package]
name = "capy-timeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
capy-poster.workspace = true
capy-timeline-project.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
which.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
capy-recorder = { path = "../capy-recorder", features = ["cef-osr"] }
tokio.workspace = true

[dev-dependencies]

[lints]
workspace = true
